exports[`margin properly applies a value when passed only one 1`] = `
Object {
  "marginBottom": "12px",
  "marginLeft": "12px",
  "marginRight": "12px",
  "marginTop": "12px",
}
`;

exports[`margin properly applies values when passed four 1`] = `
Object {
  "marginBottom": "36px",
  "marginLeft": "48px",
  "marginRight": "24px",
  "marginTop": "12px",
}
`;

exports[`margin properly applies values when passed three 1`] = `
Object {
  "marginBottom": "36px",
  "marginLeft": "24px",
  "marginRight": "24px",
  "marginTop": "12px",
}
`;

exports[`margin properly applies values when passed two 1`] = `
Object {
  "marginBottom": "12px",
  "marginLeft": "24px",
  "marginRight": "24px",
  "marginTop": "12px",
}
`;
